objects/Intranet_Schedule__c.object
<CustomObject>
    <description>Used to determine when and to whom a Content Item is visible in a specific Container</description>
    <fields>
        <fullName>Active_Status__c</fullName>
        <label>Active Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Critical_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Overrides all other DPA Calculations for Visibility</inlineHelpText>
        <label>Critical Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost and Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events and Member Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (Inactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPD and Corporate Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Chairman and CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strat Marketing and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (Inactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (Inactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations and Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <inlineHelpText>Used in DPA Calculation</inlineHelpText>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intranet_Container__c</fullName>
        <label>Intranet Container</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Container__c.Content_Types_Allowed_Text__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Intranet_Container__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Initial Filter includes only Active containers where the Content Types Allowed have been defined.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Container__c</referenceTo>
        <relationshipLabel>Intranet Schedules</relationshipLabel>
        <relationshipName>Intranet_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intranet_Item__c</fullName>
        <label>Intranet Item</label>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Schedules</relationshipLabel>
        <relationshipName>Intranet_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <formula>IF(
  AND(
    ISPICKVAL(Active_Status__c,&apos;Active&apos;),
    ISPICKVAL( Approval_Status__c ,&apos;Approved&apos;),
    IF(NOT(ISBLANK(Start_Date_Time__c)),NOW() &gt; Start_Date_Time__c,TRUE), 
    IF(NOT(ISBLANK(End_Date_Time__c)),NOW() &lt; End_Date_Time__c,TRUE),
    Intranet_Item__r.Is_Visible__c = TRUE
  ),
  TRUE,
  FALSE
)</formula>
        <inlineHelpText>Visible if Active, Approved, with date range (Start/End Dates) and if related Item is visible</inlineHelpText>
        <label>Is Visible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Permalink__c</fullName>
        <formula>Intranet_Item__r.Permalink__c</formula>
        <label>Item Permalink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>A = Entry / Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B = Early Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C = Mid-Level Management / Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D = Senior Leadership / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E = Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F = Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <description>Reference Id for data loads</description>
        <label>Load Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Level_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compared against the Has Direct Reports</description>
        <inlineHelpText>Visible only to managers with direct reports</inlineHelpText>
        <label>Manager Level Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Item__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Settings - Office</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Schedules (Office)</relationshipLabel>
        <relationshipName>Intranet_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Boardroom_Home_Container?preview=true&amp;schedid=&apos;+Id, &apos;Preview Content&apos;, &apos;_blank&apos;)</formula>
        <inlineHelpText>Preview the scheduled item within the related Container&apos;s main page</inlineHelpText>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timeline_Emphasis__c</fullName>
        <label>Timeline Emphasis</label>
        <picklist>
            <picklistValues>
                <fullName>Start</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Intranet Schedule</label>
    <listViews>
        <fullName>Active_and_Approved_Schedules</fullName>
        <columns>NAME</columns>
        <columns>Active_Status__c</columns>
        <columns>Office__c</columns>
        <columns>Is_Visible__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Critical_Visibility__c</columns>
        <columns>Importance__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Division__c</columns>
        <columns>Function__c</columns>
        <columns>Department__c</columns>
        <columns>Level__c</columns>
        <columns>Manager_Level_Only__c</columns>
        <columns>Timeline_Emphasis__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - Fixed-Boardroom-News Slider</value>
        </filters>
        <label>News - Active and Approved Schedules</label>
    </listViews>
    <listViews>
        <fullName>Job_of_the_Day_Schedule1</fullName>
        <columns>NAME</columns>
        <columns>Intranet_Item__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Office__c</columns>
        <columns>Level__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Is_Visible__c</columns>
        <columns>Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - Flexible-Boardroom-Flexible-13</value>
        </filters>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Job of the Day Schedule (Open)</label>
    </listViews>
    <listViews>
        <fullName>Job_of_the_Day_Schedule2</fullName>
        <columns>NAME</columns>
        <columns>Intranet_Item__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Preview__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Is_Visible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - Flexible-Boardroom-Flexible-13</value>
        </filters>
        <label>Job of the Day Schedule</label>
    </listViews>
    <listViews>
        <fullName>Job_of_the_Day_Schedule_For_Review</fullName>
        <columns>NAME</columns>
        <columns>Intranet_Item__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Office__c</columns>
        <columns>Level__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Is_Visible__c</columns>
        <columns>Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - Flexible-Boardroom-Flexible-13</value>
        </filters>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <label>Job of the Day Schedule (For Review)</label>
    </listViews>
    <listViews>
        <fullName>Job_of_the_Day_Schedule_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Intranet_Item__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Preview__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Is_Visible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - Flexible-Boardroom-Flexible-13</value>
        </filters>
        <filters>
            <field>Active_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Job of the Day Schedule (Inactive)</label>
    </listViews>
    <listViews>
        <fullName>Office_Events_Active_and_Approved</fullName>
        <columns>NAME</columns>
        <columns>Office__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Timeline_Emphasis__c</columns>
        <columns>Is_Visible__c</columns>
        <columns>Importance__c</columns>
        <columns>Division__c</columns>
        <columns>Function__c</columns>
        <columns>Level__c</columns>
        <columns>Manager_Level_Only__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intranet_Container__c</field>
            <operation>equals</operation>
            <value>Content - SubContainer-Office-Events</value>
        </filters>
        <label>Office Events - Active and Approved</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Schedules</pluralLabel>
    <recordTypes>
        <fullName>Date_Based</fullName>
        <active>true</active>
        <description>Items visible for a specific time period (Excluding Events)</description>
        <label>Date-Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>Static</fullName>
        <active>true</active>
        <description>Items which generally do not change visibility over time</description>
        <label>Static</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Access_Level_Not_Allowed_Importance_L1</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Importance__c, &apos;L1&apos;), NOT($Setup.Intranet_Constants__c.Allow_Importance_L1__c))</errorConditionFormula>
        <errorDisplayField>Importance__c</errorDisplayField>
        <errorMessage>Your access level does not allow an item to be scheduled at Importance “L1”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_Intranet_Schedule</fullName>
        <active>true</active>
        <description>Only specific named users are allowed to approve or reject Schduled content</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Approval_Status__c,&apos;Approved&apos;),ISPICKVAL(Approval_Status__c,&apos;Rejected&apos;)),$Setup.Intranet_Constants__c.Allow_Schedule_Approval__c = False)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Your access level does not allow Approval or Rejection of a scheduled item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_specify_timeframe_emphasis</fullName>
        <active>true</active>
        <description>Prevent an item from being emphasized over a timeframe if there is no start and/or end date</description>
        <errorConditionFormula>AND(
OR(ISBLANK(Start_Date_Time__c), ISBLANK(End_Date_Time__c)),
NOT(ISBLANK(TEXT(Timeline_Emphasis__c)))
)</errorConditionFormula>
        <errorMessage>Cannot specify Timeline Emphasis if both Start and End Date are not Specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Required_to_Approve_Date_Based_Schd</fullName>
        <active>true</active>
        <description>Require either a Start Date or End Date on a Date Based Schedule record for Approval</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Date-Based&quot;,
ISPICKVAL(Approval_Status__c, &quot;Approved&quot;),
ISBLANK(Start_Date_Time__c),
ISBLANK( End_Date_Time__c)
)</errorConditionFormula>
        <errorMessage>A Start Date or End Date is required before Approving a Date-Based type Schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Office_Required</fullName>
        <active>true</active>
        <description>A selection for Office is required for specific item types</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(Intranet_Item__r.Item_Type__c,&apos;News Item&apos;),ISPICKVAL(Intranet_Item__r.Item_Type__c,&apos;Office Event&apos;)), ISBLANK( Office__c ))</errorConditionFormula>
        <errorMessage>Office must be specified for a News Item Schedule.  If the content is for all offices, select &apos;Firmwide&apos;</errorMessage>
    </validationRules>
</CustomObject>